Line height fixes gaps in console blocks.

--- a/themes/boots/boots.css
+++ b/themes/boots/boots.css
@@ -986,6 +986,7 @@ div.hosting-task-retry form, div.hosting-task-retry form input {
 .panel-ansii.panel-body pre {
     padding: 1.25em;
     white-space: pre-wrap;
+    line-height: 120%;
 }
 
 .errors-table td > div {
